# polygon

./: .gitignore  Makefile  README.md  config.toml  fetch_spx_data.py  polygon_backtest.py  pyproject.toml  warlord_dashboard.html
.github/workflows/: deploy.yml
app/: client.py  config.py  io.py
app/analysis/: features.py  model.py  model2.py  model3.py  patches.py  reversals.py  vix1d.py  warlord.py
app/fetchers/: intraday.py  options.py  price.py  vix.py
dashboard/: index.html
scripts/: analyze.py  backtest.py  build_model.py  build_model2.py  build_model3.py  build_warlord.py  fetch.py  fetch_intraday.py  fetch_vix1d.py  reversal_analysis.py
